plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'com.chungangpark.parknavigator'
    compileSdk 35

    defaultConfig {
        applicationId "com.chungangpark.parknavigator"
        minSdk 31
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    ndkVersion '27.1.12297006'
    buildToolsVersion '35.0.0'
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation 'com.naver.maps:map-sdk:3.19.1'
    implementation 'com.google.android.gms:play-services-location:21.3.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
}